<resources>
    <string name="app_name">검사 구동 로봇</string>
    <string name="app_name_short">검사 구동 로봇</string>
    <string name="powered_by">powered by plan D labs.</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_id">ID</string>
    <string name="prompt_machine">기기 아이디</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="prompt_password_conf">비밀번호 확인</string>
    <string name="prompt_new_password">새 비밀번호</string>
    <string name="prompt_new_password_conf">새 비밀번호 확인</string>
    <string name="prompt_password_set_text">※ 비밀번호는 초기 임시번호로 설정되었으므로 로그인후에 변경해주시기 바랍니다.</string>

    <string name="action_sign_in">로그인</string>
    <string name="action_confirm">확인</string>
    <string name="action_auto_login_text">자동로그인</string>
    <string name="action_register">등록</string>
    <string name="action_join">회원가입</string>
    <string name="action_add_robot">로봇 추가</string>
    <string name="add_robot_select">로봇 선택</string>
    <string name="action_robot_resister">로봇 등록</string>
    <string name="action_find_idpw">아이디/패스워드 찾기</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_id">이 아이디는 유효하지 않습니다.</string>
    <string name="error_invalid_password">비밀번호 길이가 너무 짧습니다.</string>
    <string name="error_incorrect_password">이 암호가 잘못되었습니다.</string>
    <string name="error_field_required">필수 항목입니다.</string>

    <string name="set_add_text">※ 기기의 MAC 주소를 입력해주세요.</string>
    <string name="empty_channel">채널 목록이 없습니다.</string>
    <string name="set_update_text">※ 이 기기를 활용할 품목과 수확량을 입력해주세요.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="bottom_menu_00">대시보드</string>
    <string name="bottom_menu_01">카메라</string>
    <string name="bottom_menu_02">계단 상행</string>
    <string name="bottom_menu_03">계단 회전</string>
    <string name="bottom_menu_04">계단 하행</string>
    <string name="bottom_menu_05">시공 준비</string>
    <string name="bottom_menu_06">시공 작업</string>
    <string name="bottom_menu_07">작업 이력</string>
    <string name="bottom_menu_08">알람 이력</string>

    <string name="side_menu_01">내 정보</string>
    <string name="side_menu_02">연결된 로봇 목록</string>
    <string name="side_menu_03">로그아웃</string>

    <string name="empty_string">값을 추가해주세요.</string>
    <string name="add_robot">로봇을 추가해주세요.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="take_picture">Take picture</string>

    <string name="http_connect_url">http://192.168.0.201:30088</string>

    <!--    <string name="http_connect_url">http://op.plandlabs.com:30088</string>-->

    <string name="call_charge">충전요청</string>

    <string name="channel_name">경고알림채널</string>
    <string name="channel_description">경고알림채널입니다.</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="label_device_address">MAC ADDR:</string>
    <string name="label_state">연결상태:</string>
    <string name="label_data">Data:</string>
    <string name="no_data">No data</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>


    <string name="resultDefText">RTK</string>
    <string name="receiveEndData">0D0A</string>
    <string name="receiveEndDataByte">0D 0A</string>
    <string name="polyAgree"></string>
    <string name="btn_forward">전진</string>
    <string name="btn_backward">후진</string>
    <string name="btn_leftward">좌회전</string>
    <string name="btn_rightward">우회전</string>



    <string name="fixed_internal_ip">192.168.0.201</string>
    <string name="fixed_socket_port">43000</string>
    <string name="controller_name">controller01</string>
    <string name="mqtt_connect_url">tcp://192.168.0.201:1883</string>
<!--    <string name="mqtt_connect_url">tcp://192.168.219.126:1883</string>-->
    <string name="mqtt_root_topic">ingsys</string>
    <string name="mqtt_base_topic">ing_w00001</string>
    <string name="mqtt_username">ingsys</string>
    <string name="mqtt_password">ing#8119</string>
    <string name="vim_move_step">1F</string><!-- 1mm 실제 0.1m -->
    <string name="camera_move_step">1F</string><!-- 각도 -->
    <string name="interval_millis_v">20</string><!-- 빔 변경 반영 텀 0.05초 -->
    <string name="interval_millis_c">20</string><!-- 서보 변경 반영 텀 0.1초 -->

    <string name="vim_x_min">-750</string>
    <string name="vim_x_max">750</string>
    <string name="vim_y_min">-750</string>
    <string name="vim_y_max">750</string>
    <string name="vim_z_min">0</string>
    <string name="vim_z_max">500</string>
    <string name="camera_pan_min">-60</string>
    <string name="camera_pan_max">60</string>
    <string name="camera_tilt_min">-60</string>
    <string name="camera_tilt_max">60</string>
</resources>