<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:theme="@style/Theme.TractorInspectionRobot"
    android:background="@color/background"
    tools:context=".views.activity.LoginActivity">

    <!-- progressCircle -->
    <ProgressBar
        android:id="@+id/progressCircle"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/text_color_smaller"
                    android:text="@string/app_name"
                    android:textSize="17sp" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/rounded_shadow">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="#959595"
                        android:text="@string/action_sign_in"
                        android:textSize="21sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:gravity="left"
                        android:text="아이디"
                        android:textColor="#bbffffff"
                        android:textSize="15sp" />
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/OutlinedBoxTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/id"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:inputType="text"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:textColorLink="#2f4d6a"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:gravity="left"
                        android:text="패스워드"
                        android:textColor="#bbffffff"
                        android:textSize="15sp" />
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/OutlinedBoxTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_confirm"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnLogin"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16sp"
                        android:background="#2f4d6a"
                        android:text="@string/action_sign_in"
                        android:textColor="#ffffff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:visibility="gone">
                        <Button
                            android:id="@+id/btnFind"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16sp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="#888888"
                            android:text="@string/action_find_idpw"
                            android:textColor="#ffffff"
                            android:textSize="14sp" />
                        <Button
                            android:id="@+id/btnRegister"
                            style="?android:textAppearanceSmall"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16sp"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:background="#555555"
                            android:text="@string/action_join"
                            android:textColor="#ffffff"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/auto_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/action_auto_login_text"
                        tools:ignore="TouchTargetSizeCheck"
                        android:visibility="gone"/>
                    <TextView
                        android:id="@+id/pwHelptextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="13sp"
                        android:paddingTop="10dp"
                        android:text="@string/prompt_password_set_text"
                        android:visibility="gone"/>

                    <Button
                        android:id="@+id/find_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="38dp"
                        android:layout_marginTop="16sp"
                        android:background="#aaaaaa"
                        android:text="@string/action_find_idpw"
                        android:textColor="#ffffff"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:visibility="gone"
                        android:text="@string/powered_by" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/powered_by"
                    android:textColor="@color/text_color_smaller"
                    android:textSize="14sp"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>